[package]
name = "iced_modern_theme"
version = "0.1.2"
edition = "2021"
description = "Modern theme for iced-rs"
license = "MIT"
repository = "https://github.com/KainTwinam/iced-modern-theme"
readme = "README.md"
keywords = ["iced", "gui", "modern", "theme", "palette"]
categories = ["gui"]

[dependencies]
iced = "0.13.1"
palette = "0.7.5" 


[[example]]
name = "showcase"
path = "examples\\showcase.rs"