[package]
name = "iced_modern_theme"
version = "0.1.6"
edition = "2021"
description = "Modern theme for iced-rs"
license = "MIT"
repository = "https://github.com/KainTwinam/iced-modern-theme"
readme = "README.md"
keywords = ["iced", "gui", "modern", "theme", "palette"]
categories = ["gui"]

[dependencies]
iced = { version = "0.14.0-dev"}
palette = "0.7.5" 

[patch.crates-io]
iced = { git = "https://github.com/iced-rs/iced", rev = "aa633f6832c93d81fc829bcd351b369f0aada282" }

[[example]]
name = "showcase"
path = "examples\\showcase.rs"